# Path-Tracing

./: CMakeLists.txt  Path Tracing.sln  Path Trasing.sln  README.md
Path Tracing/: Path Tracing.filters  Path Tracing.vcxproj  path_tracing.h  render.h
Path Tracing/lib/imgui/: imconfig.h  imgui.h
Path Trasing/: Path Trasing.vcxproj  Path Trasing.vcxproj.filters  box.cpp  box.h  imgui.ini  main.cpp  path_tracing.cpp  path_tracing.h  player.cpp  player.h  render.cpp  render.h  shader.glsl  sphere.cpp  sphere.h  world.cpp  world.h
include/: box.h  material.h  model.h  path_tracing.h  player.h  sphere.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  path_tracing.cpp  player.cpp  render.cpp  shader.glsl  world.cpp
